UCL-641 | minor fixes for chevron icon visibility and logic

--- a/src/components/Form/Select/SingleSelect/Select.module.scss
+++ b/src/components/Form/Select/SingleSelect/Select.module.scss
@@ -328,6 +328,7 @@ $listItemHeight: 2.5rem;
   & .select {
     background-color: transparent;
     transition: none;
+    position: relative;
     &:not(.expanded) {
       button:focus:not(.error) {
         border-width: 0;
