--- a/src/components/Tooltip/Tooltip.module.scss
+++ b/src/components/Tooltip/Tooltip.module.scss
@@ -163,7 +163,7 @@
   }
 
   &.inline-editing {
-    position: relative;
+    position: absolute;
     right: 0;
     z-index: 9;
 
